INT-feat-39a18.0: Hideable and unpinnable menu

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -2,19 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="{LANG_DIRECTION}" lang="{LANG_LANGUAGE}" xml:lang="{LANG_LANGUAGE}">
   <head>
     <title>{title}</title>
-    <link rel="shortcut icon" href="{-path_prefix-}favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/jquery.css" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}jquery.css" />
+    <link rel="shortcut icon" href="{-path_prefix-}favicon.ico?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/jquery.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}jquery.css?{C_var_db_update}" />
 
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global.css" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global_server.css" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global_server.css?{C_var_db_update}" />
     <!--[if IE]>
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global-ie.css" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global-ie.css?{C_var_db_update}" />
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{D_TEMPLATE_PATH}/_template.css" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin.css" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin_server.css" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{D_TEMPLATE_PATH}/_template.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin_server.css?{C_var_db_update}" />
     <!-- IF ADV_SEO_META_KEYWORDS -->
     <meta name="keywords" content="{ADV_SEO_META_KEYWORDS}" />
     <!-- ENDIF -->
@@ -29,8 +29,8 @@
   </head>
 
   <body class="style">
-    <script type="text/javascript" src="{-path_prefix-}js/lib/jquery.js"></script>
-    <script type="text/javascript" src="{-path_prefix-}js/lib/jquery-ui.js"></script>
+    <script type="text/javascript" src="{-path_prefix-}js/lib/jquery.js?{C_var_db_update}"></script>
+    <script type="text/javascript" src="{-path_prefix-}js/lib/jquery-ui.js?{C_var_db_update}"></script>
 
     <script type="text/javascript">
       var dpath = '{dpath}';
@@ -83,8 +83,8 @@
     </script>
 
 
-    <script type="text/javascript" src="{-path_prefix-}js/sn_global.js"></script>
-    <script type="text/javascript" src="{-path_prefix-}js/sn_timer.js"></script>
+    <script type="text/javascript" src="{-path_prefix-}js/sn_global.js?{C_var_db_update}"></script>
+    <script type="text/javascript" src="{-path_prefix-}js/sn_timer.js?{C_var_db_update}"></script>
     <!-- IF IMPERSONATING -->
       <div style="text-align: center" class="warning">{IMPERSONATING}</div>
     <!-- ENDIF -->
