--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -62,9 +62,7 @@ planet = {
 var que_id = '{QUE_ID}';
 --></script>
 
-<script type="text/javascript" src="js/build_unit.js"></script>
-<script type="text/javascript" >
-</script>
+<script type="text/javascript" src="js/build_unit.js?{C_var_db_update}"></script>
 
 <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
 <!-- INCLUDE eco_queue -->
