--- a/design/templates/OpenGame/chat_body.tpl.html
+++ b/design/templates/OpenGame/chat_body.tpl.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
   var ally_id = "{ALLY}";
 </script>
-<script type="text/javascript" src="js/chat.js"></script>
+<script type="text/javascript" src="js/chat.js?{C_var_db_update}"></script>
 
 <h1>{PAGE_HEADER}</h1>
 
