--- a/design/templates/OpenGame/fleet_javascript.tpl.html
+++ b/design/templates/OpenGame/fleet_javascript.tpl.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="js/fleet.js"></script>
+<script type="text/javascript" src="js/fleet.js?{C_var_db_update}"></script>
 <script type="text/javascript"><!--
 var fleets = Array();
 <!-- BEGIN fleets -->
