--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -1,5 +1,5 @@
 <!-- DEFINE $OVERVIEW = true -->
-<script type="text/javascript" src="js/sn_ajax_send_fleet.js"></script>
+<script type="text/javascript" src="js/sn_ajax_send_fleet.js?{C_var_db_update}"></script>
 <script type="text/javascript">
   var MT_SPY = {D_MT_SPY};
   var MT_COLONIZE = {D_MT_COLONIZE};
