--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="js/sn_universe.js"></script>
-<script type="text/javascript" src="js/sn_ajax_send_fleet.js"></script>
+<script type="text/javascript" src="js/sn_universe.js?{C_var_db_update}"></script>
+<script type="text/javascript" src="js/sn_ajax_send_fleet.js?{C_var_db_update}"></script>
 <!-- INCLUDE fleet_javascript -->
 
 <script type="text/javascript"><!--
