INT-fix-39a18.4: Fixed non-scrollable menu when hidden

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -29,7 +29,7 @@
   <style type="text/css">
     #left_menu {
       display: none;
-      position: fixed;
+      position: absolute;
     }
   </style>
     <!-- DEFINE $MENU_START_BUTTON_PIN = '{LA_menu_pin}' -->
