MISC-misc-39a18.9: Minor template tweaks

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -2,19 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="{LANG_DIRECTION}" lang="{LANG_LANGUAGE}" xml:lang="{LANG_LANGUAGE}">
   <head>
     <title>{title}</title>
-    <link rel="shortcut icon" href="{-path_prefix-}favicon.ico?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/jquery.css?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}jquery.css?{C_var_db_update}" />
+    <link rel="shortcut icon" href="{D_SN_ROOT_VIRTUAL}favicon.ico?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/jquery.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}jquery.css?{C_var_db_update}" />
 
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global.css?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global_server.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global_server.css?{C_var_db_update}" />
     <!--[if IE]>
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global-ie.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global-ie.css?{C_var_db_update}" />
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{D_TEMPLATE_PATH}/_template.css?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin.css?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin_server.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}skin.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}skin_server.css?{C_var_db_update}" />
     <!-- IF ADV_SEO_META_KEYWORDS -->
     <meta name="keywords" content="{ADV_SEO_META_KEYWORDS}" />
     <!-- ENDIF -->
@@ -25,17 +25,17 @@
     <meta http-equiv="Cache-Control" content="no-cache" />
     {-meta-}
     <!--<style> body, html { margin:0px; padding: 0px; overflow: hidden; font: menu; border: none; } </style>-->
-    <base href="{-path_prefix-}" />
+    <base href="{D_SN_ROOT_VIRTUAL}" />
   </head>
 
   <body class="style">
-    <script type="text/javascript" src="{-path_prefix-}js/lib/jquery.js?{C_var_db_update}"></script>
-    <script type="text/javascript" src="{-path_prefix-}js/lib/jquery-ui.js?{C_var_db_update}"></script>
+    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery.js?{C_var_db_update}"></script>
+    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery-ui.js?{C_var_db_update}"></script>
 
     <script type="text/javascript">
       var dpath = '{dpath}';
-      var sn_path_prefix = '{-path_prefix-}';
-
+      var sn_path_prefix = '{D_SN_ROOT_VIRTUAL}';
+      var SN_GOOGLE = '{SN_GOOGLE}' ? 1 : 0;
 
       var localTime = new Date();
       var serverTime = new Date('{TIME_NOW}' * 1000);
@@ -83,8 +83,8 @@
     </script>
 
 
-    <script type="text/javascript" src="{-path_prefix-}js/sn_global.js?{C_var_db_update}"></script>
-    <script type="text/javascript" src="{-path_prefix-}js/sn_timer.js?{C_var_db_update}"></script>
+    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/sn_global.js?{C_var_db_update}"></script>
+    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/sn_timer.js?{C_var_db_update}"></script>
     <!-- IF IMPERSONATING -->
       <div style="text-align: center" class="warning">{IMPERSONATING}</div>
     <!-- ENDIF -->
